resolved fdo#67571 write flags and formula token array again

Regression introduced with 337066eb1fa395990b78d1032c399a4688d2a6f9,
flags and formula token array weren't written if the formula result was
an error value.

Change-Id: I8ccd55a7b43d5ceb79002e01f0b3d33d36d85538